fix quote block text align

--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ a {
     padding: 60px;
     height: 300px;
     align-items: center;
+    gap: 20px;;
 }
 
 .description, .image {
@@ -108,9 +109,13 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     padding: 100px;
     background: #E5E7EB;
+}
+
+.quote span {
+    font-weight: bold;
+    text-align: right;
 }
 
 /* Signup */
